--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@google/genai": "^0.15.0",
     "@nextui-org/react": "^2.6.11",
-    "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@solana/web3.js": "^1.98.2",
     "apexcharts": "^4.7.0",
     "bs58": "^6.0.0",
-    "class-variance-authority": "^0.7.1",
+    "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^12.12.2",
     "lucide-react": "^0.511.0",
