bv/feat/jupiter

--- a/backend/package.json
+++ b/backend/package.json
@@ -22,11 +22,13 @@
   "author": "Your Name <your.email@example.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/express-validator": "^2.20.33",
     "@types/helmet": "^0.0.48",
     "@types/morgan": "^1.9.10",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-validator": "^7.2.1",
     "helmet": "^8.1.0",
     "morgan": "^1.10.0",
     "winston": "^3.17.0"
