--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,14 @@
   "dependencies": {
     "@google/genai": "^0.15.0",
     "@nextui-org/react": "^2.6.11",
-    "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slider": "^1.3.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
     "@solana/web3.js": "^1.98.2",
     "apexcharts": "^4.7.0",
     "bs58": "^6.0.0",
